--- a/web/abstruse/package.json
+++ b/web/abstruse/package.json
@@ -23,7 +23,9 @@
     "@angular/service-worker": "~12.1.1",
     "copy-text-to-clipboard": "^3.0.1",
     "fuse.js": "^6.4.6",
+    "ng": "^0.0.0",
     "ngx-graph": "^0.9.0",
+    "npm": "^8.5.4",
     "rxjs": "~6.5.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
